--- a/recipe_app/recipes/templates/recipes/detail.html
+++ b/recipe_app/recipes/templates/recipes/detail.html
@@ -24,65 +24,77 @@
                     </svg>
                 {% endif %}
             </div> {% endcomment %}
-            <div class="recipe-user-panel">
-                <button class="panel-icon" id="share-button-{{ preview.id }}" style="transform: scale(0.9)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-share-2"><circle cx="18" cy="5" r="3"/><circle cx="6" cy="12" r="3"/><circle cx="18" cy="19" r="3"/><line x1="8.59" x2="15.42" y1="13.51" y2="17.49"/><line x1="15.41" x2="8.59" y1="6.51" y2="10.49"/></svg>
-                </button>
-                {% if request.user.is_authenticated %}
-                    {% if recipe_saved_by_user %}
-                        <button class="panel-icon" id="bookmark-icon-saved" style="display: flex">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="indianred" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
-                        </button>
-                        <button class="panel-icon" id="bookmark-icon-unsaved" style="display: none">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-plus"><circle cx="12" cy="12" r="10"/><path d="M8 12h8"/><path d="M12 8v8"/></svg>
-                        </button>
-                    {% else %}
-                        <button class="panel-icon" id="bookmark-icon-saved" style="display: none">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="indianred" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
-                        </button>
-                        <button class="panel-icon" id="bookmark-icon-unsaved" style="display: flex">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-plus"><circle cx="12" cy="12" r="10"/><path d="M8 12h8"/><path d="M12 8v8"/></svg>    
-                        </button>
+            <div class="recipe-top-panel">
+                <div class="stars">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path
+                            d="M12 1.726l2.338 7.196h7.566l-6.121 4.448 2.338 7.196L12 16.118l-6.121 4.448 2.338-7.196L2.096 8.922h7.566z"
+                            fill="currentColor"
+                            stroke="currentColor"
+                            stroke-width="1"
+                            stroke-linejoin="round"
+                        />
+                    </svg>
+                        {% if recipe.avg_rating %}
+                            &thinsp;{{ recipe.avg_rating }}
+                        {% endif %}
+                        <span style="font-weight: 400">({{ recipe.rating_count }})</span>
+                </div>
+                <div class="recipe-user-panel">
+                    <button class="panel-icon" id="share-button-{{ preview.id }}" style="transform: scale(0.9)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-share-2"><circle cx="18" cy="5" r="3"/><circle cx="6" cy="12" r="3"/><circle cx="18" cy="19" r="3"/><line x1="8.59" x2="15.42" y1="13.51" y2="17.49"/><line x1="15.41" x2="8.59" y1="6.51" y2="10.49"/></svg>
+                    </button>
+                    {% if request.user.is_authenticated %}
+                        {% if recipe_saved_by_user %}
+                            <button class="panel-icon" id="bookmark-icon-saved" style="display: flex">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="indianred" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
+                            </button>
+                            <button class="panel-icon" id="bookmark-icon-unsaved" style="display: none">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-plus"><circle cx="12" cy="12" r="10"/><path d="M8 12h8"/><path d="M12 8v8"/></svg>
+                            </button>
+                        {% else %}
+                            <button class="panel-icon" id="bookmark-icon-saved" style="display: none">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="indianred" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
+                            </button>
+                            <button class="panel-icon" id="bookmark-icon-unsaved" style="display: flex">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-plus"><circle cx="12" cy="12" r="10"/><path d="M8 12h8"/><path d="M12 8v8"/></svg>    
+                            </button>
+                        {% endif %}
                     {% endif %}
-                {% endif %}
+                </div>
             </div>
             <div class="recipe-title">
                 <span>{{ recipe.title }}</span>
             </div>
+            <div style="font-size: 1.1rem; font-weight: 500; color: indianred; margin-top: 1.1rem; text-align: center;">
+                {{ recipe.get_difficulty_display }} • 
+                <span title="{{ recipe.time_active|time_converter }} Arbeitszeit | {{ recipe.time_inactive|time_converter }} Kochzeit">{{ recipe.time_total|time_converter}}</span>
+                {% for diet in recipe.diets.all %}
+                    <span> • {{ diet }}</span>
+                {% endfor %}
+                <div style="display: inline-flex; justify-content: center; align-items: flex-start; gap: 0.4rem;">
+                    • {{ recipe.default_servings }}
+                    {% if recipe.default_servings == 1%}
+                        Portion
+                    {% else %}
+                        Portionen
+                    {% endif %}
+                    <div class="servings-buttons-container" style="display: none;">
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-plus"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M8 12h8"/><path d="M12 8v8"/></svg>
+                        </button>
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-minus"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M8 12h8"/></svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
             <div class="recipe-description">
                 <div style="max-width: 500px; text-align: center"><span>{{ recipe.description }}</span></div>
             </div>
-            <div class="recipe-pad-row">
-                <div class="recipe-difficulty recipe-difficulty-X">
-                    {{ recipe.get_difficulty_display }}
-                </div>
-                {% for cuisine_type in recipe.cuisine_types.all %}
-                <div class="recipe-difficulty recipe-difficulty-X">
-                    {{ cuisine_type.name }}
-                </div>
-                {% endfor %}
-                <div class="recipe-time">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg>
-                    {{ recipe.time_total|time_converter }}
-                </div>
-                <div class="recipe-servings">
-                    {{ recipe.default_servings }}
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 15" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M12 15a9 9 0 0 0 9-9H3a9 9 0 0 0 9 9Z"/>
-                        <path d="M7 15h10"/>
-                    </svg>
-                </div>
-            </div>
+        
             <div class="recipe-pad-row">
                 <div class="recipe-pad-content">
-                    <div>
-                        <div class="main-ingredients"><span style="font-weight: 400">Zeitbedarf</span><br>
-                            <ul style="overflow-wrap: break-word; padding-left: 1rem; list-style-type: none">
-                                <li style="margin-top: 0.5rem;">{{ recipe.time_active|time_converter }} Arbeitszeit</li>
-                                <li style="margin-top: 0.5rem;">{{ recipe.time_inactive|time_converter }} Kochzeit</li>
-                            </ul>
-                        </div>
-                    </div>
                     <div>
                         {% for component in recipe.components.all %}
                             <div class="main-ingredients"><span style="font-weight: 400">{{ component.name }}</span><br>
@@ -95,14 +107,14 @@
                         {% endfor %}
                     </div>
                     <div class="tips-container hide-mobile"><span style="font-weight: 400">Tipps:</span>
-                        <ul style="overflow-wrap: break-word; padding-left: 2rem; list-style-type: circle">
+                        <ul style="overflow-wrap: break-word; padding-left: 1.2rem; list-style-type: none">
                             {% for tip in recipe.tips.all %}
                                 <li style="margin-top: 0.5rem;">{{ tip.tip }}</li>
                             {% endfor %}
                         </ul>
                     </div>
                     <div class="storage-container hide-mobile"><span style="font-weight: 400">Aufbewahrung:</span>
-                        <p style="margin-top: 0.5rem;">{{ recipe.storage }}</p>
+                        <p style="margin-top: 0.5rem; padding-left: 1.2rem;">{{ recipe.storage }}</p>
                     </div>
                 </div>
                 <div class="recipe-pad-content">
@@ -116,6 +128,26 @@
                             {% endfor %}
                         </ol>
                     </div>
+                    <div class="tips-container hide-desktop"><span style="font-weight: 400">Tipps:</span>
+                        <ul style="overflow-wrap: break-word; padding-left: 1.2rem; list-style-type: none">
+                            {% for tip in recipe.tips.all %}
+                                <li style="margin-top: 0.5rem;">{{ tip.tip }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="storage-container hide-desktop"><span style="font-weight: 400">Aufbewahrung:</span>
+                        <p style="margin-top: 0.5rem; padding-left: 1.2rem;">{{ recipe.storage }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="recipe-bottom-panel">
+                <div class="author">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
+                    {% if recipe.author %}
+                        {{ recipe.author }}
+                    {% else %}
+                        <span>Unbekannt</span>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -150,10 +182,10 @@
 
     // Share button functionality
     document.addEventListener('DOMContentLoaded', () => {
-        const tooltip = document.createElement('div');
-        tooltip.className = 'share-tooltip';
-        tooltip.textContent = 'Link kopiert!';
-        document.body.appendChild(tooltip);
+        const share_tooltip = document.createElement('div');
+        share_tooltip.className = 'tooltip';
+        share_tooltip.textContent = 'Link kopiert!';
+        document.body.appendChild(share_tooltip);
     
         document.querySelectorAll('[id^="share-button-"]').forEach(button => {
             button.addEventListener('click', async function(e) {
@@ -166,13 +198,13 @@
                     
                     // Show tooltip
                     const rect = this.getBoundingClientRect();
-                    tooltip.style.left = `${rect.left}px`;
-                    tooltip.style.top = `${rect.bottom + 5}px`;
-                    tooltip.classList.add('visible');
+                    share_tooltip.style.left = `${rect.left}px`;
+                    share_tooltip.style.top = `${rect.bottom + 5}px`;
+                    share_tooltip.classList.add('visible');
                     
                     // Remove tooltop
                     setTimeout(() => {
-                        tooltip.classList.remove('visible');
+                        share_tooltip.classList.remove('visible');
                         this.style.color = '';
                     }, 1000);
                 } catch (err) {
