--- a/recipe_app/recipes/templates/recipes/generate.html
+++ b/recipe_app/recipes/templates/recipes/generate.html
@@ -10,7 +10,7 @@
 
 <div style="height: 70vh; display: flex; align-items: center; justify-content: center; flex-direction: column;">
 
-    <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+    <div id="loading-spinner" class="spinner-overlay" style="display: none; text-align: center;">
         <p style="font-weight: 600; font-size: 2rem;">Erstelle Rezeptvorschläge ...</p>
         <div class="spinner"></div>
     </div>
