--- a/recipe_app/recipes/templates/recipes/previews.html
+++ b/recipe_app/recipes/templates/recipes/previews.html
@@ -12,12 +12,12 @@
 <div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         <div class="widget">
-            <span style="font-weight: 600; font-size: 2rem;">Wie wäre es hiermit?</span>
+            <span style="font-weight: 600; font-size: 2rem; ">Wie wäre es hiermit?</span>
         </div>
     </div>
 </div>
 
-<div id="loading-spinner" class="spinner-overlay" style="display: none;">
+<div id="loading-spinner" class="spinner-overlay" style="display: none; text-align: center;">
     <p style="font-weight: 600; font-size: 2rem;">Erstelle vollständiges Rezept ...</p>
     <div class="spinner"></div>
 </div>
